[project]
name = "main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pykakasi==1.2",
    "pytest==8.3.4",
    "pytest-mock==3.14.0",
    "python-dotenv==1.0.0",
    "tqdm==4.36.1",
    "tweepy==3.8.0",
    "black>=26.1.0",
]

[tool.uv]
package = false
