[project]
name = "main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.1.0",
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "protobuf>=5.28.0",
    "pykakasi>=2.3.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.0",
    "tqdm>=4.67.3",
    "tweepy>=4.16.0",
]

[tool.uv]
package = false

[tool.black]
# protoc が生成したコードは整形対象外（CIのblackは main/ 全体を走るため）
force-exclude = "src/mixi2_gen/"

[tool.pytest.ini_options]
testpaths = ["tests"]
